@@ -86,8 +86,8 @@
 	**     Eugene Grigorjev (eugene.grigorjev@zabbix.com)
 	**/
 	
-//	define("USE_PROFILING",1);
-//	define("USE_TIME_PROF",1);
+	define("USE_PROFILING",1);
+	define("USE_TIME_PROF",1);
 //	define("USE_MEM_PROF",1);
 //	define("USE_SQLREQUEST_PROF",1);
 //	define("SHOW_SQLREQUEST_DETAILS",1);
