@@ -1,5 +1,7 @@
 Changes for 1.3:
 
+ - fixed trigger description substitution in action comporation (Eugene) 
+ - fixed trigger description substitution in message subject and body (Eugene) 
  - added color selection for trigger severity 'warning' and 'information' (Eugene)
  - fixed limitation of return value for 'net.if.*' (Eugene)
  - fixed limitation of return value for 'vfs.dev.*' (Eugene)
